force-app/main/default/objects/OpportunityLineItem/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <formula>Time_Entry__r.Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>