force-app/main/default/objects/OpportunityLineItem/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <formula>text(PricebookEntry.Product2.Time_Entry_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Type</label>
    <type>Text</type>
</CustomField>