force-app/main/default/objects/OpportunityLineItem/fields/Non_billable__c.field-meta.xml
<CustomField>
    <fullName>Non_billable__c</fullName>
    <formula>Time_Entry__r.Non_billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-billable</label>
    <type>Checkbox</type>
</CustomField>