force-app/main/default/objects/OpportunityLineItem/fields/Original_System_ID_Charge__c.field-meta.xml
<CustomField>
    <fullName>Original_System_ID_Charge__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original System ID Charge</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>