force-app/main/default/objects/OpportunityLineItem/fields/Quickbooks_Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Billing_Category__c</fullName>
    <formula>PricebookEntry.Product2.QB_Billing_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Billing Category</label>
    <type>Text</type>
</CustomField>