force-app/main/default/objects/OpportunityLineItem/fields/Quickbooks_Category__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Category__c</fullName>
    <label>Quickbooks Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>