force-app/main/default/objects/OpportunityLineItem/fields/Quickbooks_Class__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Class__c</fullName>
    <formula>PricebookEntry.Product2.Quickbooks_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Class</label>
    <type>Text</type>
</CustomField>