force-app/main/default/objects/OpportunityLineItem/fields/Quickbooks_Internal_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Internal_Line_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Quickbooks Internal Line ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>