force-app/main/default/objects/OpportunityLineItem/fields/Quickbooks_Internal_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Internal_Product_Id__c</fullName>
    <formula>PricebookEntry.Product2.QuickbooksInternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Internal Product Id</label>
    <type>Text</type>
</CustomField>