force-app/main/default/objects/OpportunityLineItem/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>