force-app/main/default/objects/OpportunityLineItem/fields/Time_Entry_Category__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Category__c</fullName>
    <formula>Text(PricebookEntry.Product2.Time_Entry_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Entry Category</label>
    <type>Text</type>
</CustomField>